Drop -XX:+AggressiveOpts that was removed in Java 13